# RaptorBot

./: README.md  afk.json  blacklist.json  joke.txt  ka.py  main.py  mainbank.json  pyproject.toml  reaction_roles.txt  readme.md  requirement.txt
cogs/: economy.py  fun.py  games.py  help.py  img.py  info.py  misc.py  mod.py  oo.py  uti.py
db/: bl.sqlite
hangman/: controller.py
images/cogs/: fun.py  games.py  giveaway.py  img.py  info.py  lvl.py  misc.py  music.py  utils.py
json/: cmdusage.json
