[tool.poetry]
name = "raptorcodeswastic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
praw = "^7.2.0"
youtube-dl = "^2021.4.17"
aiofiles = "^0.6.0"
Flask = "^1.1.2"
giphy-client = "^1.0.0"
wikipedia = "^1.4.0"
DiscordUtils = "^1.2.9"
PyNaCl = "^1.4.0"
timeago = "^1.0.15"
psutil = "^5.8.0"
discord-pretty-help = "^1.3.0"
base91 = "^1.0.1"
opencv-python = "^4.5.2"
buttons = "^0.1.9"
Pillow = "^8.2.0"
scikit-image = "^0.18.1"
prsaw = "^0.3.1"
jishaku = "^1.20.0"
lxml = "^4.6.3"
spice-api = "^1.0.4"
colour = "^0.1.5"
discord-custom-help = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
